// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Tooltip - prop type is marked as defined 1`] = `
<button
  aria-describedby={null}
  className="tooltip btn btn-secondary"
>
  

  

  <span
    role="tooltip"
  />
</button>
`;

exports[`Component: Tooltip - renders 1`] = `
<button
  className="tooltip btn btn-secondary"
>
  

  test title
  <i
    className="material-icons-outlined"
  >
    edit
  </i>
  

  <span
    role="tooltip"
  >
    test text
  </span>
</button>
`;

exports[`Component: Tooltip - renders div with class tooltip 1`] = `
<button
  aria-describedby={null}
  className="tooltip btn btn-secondary"
>
  

  

  <span
    role="tooltip"
  >
    test text
  </span>
</button>
`;

exports[`Component: Tooltip - renders with icon if icon is provided 1`] = `
<button
  className="tooltip btn btn-secondary"
>
  

  <i
    className="material-icons-outlined"
  >
    edit
  </i>
  

  <span
    role="tooltip"
  >
    test text
  </span>
</button>
`;

exports[`Component: Tooltip - renders with title text if provided 1`] = `
<button
  aria-describedby={null}
  className="tooltip btn btn-secondary"
>
  

  test title
  

  <span
    role="tooltip"
  >
    test text
  </span>
</button>
`;

exports[`Component: Tooltip - renders with tooltip position bottom 1`] = `
<button
  aria-describedby={null}
  className="tooltip btn btn-secondary tooltip-bottom"
>
  

  

  <span
    role="tooltip"
  >
    test text
  </span>
</button>
`;

exports[`Component: Tooltip - renders with tooltip position left 1`] = `
<button
  aria-describedby={null}
  className="tooltip btn btn-secondary tooltip-left"
>
  

  

  <span
    role="tooltip"
  >
    test text
  </span>
</button>
`;

exports[`Component: Tooltip - renders with tooltip position right 1`] = `
<button
  aria-describedby={null}
  className="tooltip btn btn-secondary tooltip-right"
>
  

  

  <span
    role="tooltip"
  >
    test text
  </span>
</button>
`;

exports[`Component: Tooltip - renders with tooltip position top 1`] = `
<button
  aria-describedby={null}
  className="tooltip btn btn-secondary tooltip-top"
>
  

  

  <span
    role="tooltip"
  >
    test text
  </span>
</button>
`;
